--- a/client/src/Containers/CandidatesBar/CandidatesBar.css
+++ b/client/src/Containers/CandidatesBar/CandidatesBar.css
@@ -8,7 +8,26 @@
 .candidate-img {
   background-position: center;
   background-size: cover;
-  height: 150px;
+  height: 100px;
   margin: 0 2px;
-  min-width: 150px;
+  min-width: 100px;
 }
+
+.candidate-img-div .dropdown-content {
+  display:none;
+}
+
+.dropdown-content p {
+  font-size: 12px;
+  -webkit-margin-before: 0em;
+  -webkit-margin-after: 0em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+}
+.candidate-img-div:hover .dropdown-content{
+  display:block;
+}
+
+.grow { transition: all .2s ease-in-out; }
+
+.grow:hover { transform: scale(1.1); }
