--- a/client/src/Components/App/App.css
+++ b/client/src/Components/App/App.css
@@ -1,4 +1,89 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+
+body {
+font-family: 'Open Sans', sans-serif;
+}
+
+h1, h3, ul {
+  display: block;
+  -webkit-margin-before: 0em;
+  -webkit-margin-after: 0em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+
+}
+
+.tracker-logo {
+    width: 160px;
+  
+}
+
+button {
+  padding: 7px;
+  font-size: 12px;
+  border: none;
+}
+
+.nav-button {
+  margin: 5px;
+  border: 1px solid white;
+  background: none;
+  color: white;
+  cursor: pointer;
+}
+
+.nav-button:hover{
+  background: white;
+  color: #184982;
+}
+
+.button-row {
+  margin-top: 10px;
+}
+
+
+.header {
+  height: 400px;
+  background: no-repeat center url("../../images/coloCapitalSizedPixel.jpg");
+  background-size: cover;
+  display:flex;
+  flex-direction: column;
+}
+
+.header-top {
+  background: #fff;
+  width: 100%;
+  height: 60px;
+  margin-top: 20px;
+  display: flex;
+ /* padding-top: 30px;*/
+}
+
+.header-main {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.header-main {
+  display: flex;
+  align-items: flex-end;
+}
+.header-text {
+  width: 40%;
+  color: white;
+  text-align: center;
+  margin-right: 15px;
+}
+
+.nav-list {
+  text-align: left;
+}
+
+.nav-item {
+  padding: 2px;
+}
+
+/*.App {
   text-align: center;
 }
 
@@ -25,4 +110,4 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}
+}*/
