--- a/client/src/Components/App/App.css
+++ b/client/src/Components/App/App.css
@@ -2,6 +2,7 @@
 
 body {
 font-family: 'Open Sans', sans-serif;
+color: #7b807b;
 }
 
 h1, h3, ul {
@@ -13,10 +14,6 @@ h1, h3, ul {
 
 }
 
-.tracker-logo {
-    width: 160px;
-  
-}
 
 button {
   padding: 7px;
@@ -24,90 +21,4 @@ button {
   border: none;
 }
 
-.nav-button {
-  margin: 5px;
-  border: 1px solid white;
-  background: none;
-  color: white;
-  cursor: pointer;
-}
 
-.nav-button:hover{
-  background: white;
-  color: #184982;
-}
-
-.button-row {
-  margin-top: 10px;
-}
-
-
-.header {
-  height: 400px;
-  background: no-repeat center url("../../images/coloCapitalSizedPixel.jpg");
-  background-size: cover;
-  display:flex;
-  flex-direction: column;
-}
-
-.header-top {
-  background: #fff;
-  width: 100%;
-  height: 60px;
-  margin-top: 20px;
-  display: flex;
- /* padding-top: 30px;*/
-}
-
-.header-main {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.header-main {
-  display: flex;
-  align-items: flex-end;
-}
-.header-text {
-  width: 40%;
-  color: white;
-  text-align: center;
-  margin-right: 15px;
-}
-
-.nav-list {
-  text-align: left;
-}
-
-.nav-item {
-  padding: 2px;
-}
-
-/*.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}*/
