--- a/client/src/Components/App/App.css
+++ b/client/src/Components/App/App.css
@@ -11,6 +11,7 @@ h1, h3, ul {
   -webkit-margin-after: 0em;
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
+  -webkit-padding-start: 0px;
 
 }
 
