--- a/client/src/Components/Card/Card.css
+++ b/client/src/Components/Card/Card.css
@@ -1,12 +1,15 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 300px;
+  height: 330px;
   width: 230px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   margin: 10px;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+
+
+  }
 
   .card-head {
     display: -ms-flexbox;
@@ -32,6 +35,49 @@
   text-align: center;
 }
 
-  .card-head-text h3 {
-    text-align: right;
-  }
+.card-row {
+  display:flex;
+  flex-direction: row;
+  background: #ecebeb;
+  margin-bottom: 10px;
+}
+
+
+
+.card-head-text h3 {
+  text-align: right;
+}
+
+.card-icon {
+  align-items: center;
+  display: flex;
+  height: 35px;
+  justify-content: center;
+  width: 35px;
+}
+
+.card-row-text {
+  width: 100%;
+  display:flex;
+  flex-direction:column;
+}
+.card-row-big-text {
+  margin:auto;
+  font-size: 20px;
+  padding: 2px;
+}
+
+.card-row-small-text {
+  font-weight: 300;
+  font-size: 10px;
+  margin:auto;
+  padding: 2px;
+}
+
+.party {
+  margin-bottom: 5px;
+  margin-top: 5px;
+  text-transform: uppercase;
+
+}
+
