--- a/client/src/Components/App/App.css
+++ b/client/src/Components/App/App.css
@@ -22,4 +22,18 @@ button {
   border: none;
 }
 
+.top-button {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  bottom: 0px;
+  right: 0px;
+  color: white;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+a.top-button {
+  text-decoration: none;
+}
 
