--- a/client/src/Containers/CandidateDetails/CandidateDetails.css
+++ b/client/src/Containers/CandidateDetails/CandidateDetails.css
@@ -1,7 +1,7 @@
 
 .charts{
   display: flex;
-  width: 90vw;
+  width: 70vw;
   height: 40vh;
 }
 
@@ -9,7 +9,7 @@
   border-bottom: 1px solid gray;
 }
 
-.name-div {
+.details-name-div {
   background: #184982;
   color: white;
   display: flex;
@@ -69,4 +69,9 @@
   justify-content: center;
   width: 70px;
   height: 70px;
+}
+
+.main-details-container {
+  display:flex;
+  flex-direction: column;
 }
