--- a/client/src/Components/ContributionContainer/ContributionContainer.css
+++ b/client/src/Components/ContributionContainer/ContributionContainer.css
@@ -10,6 +10,10 @@
   flex-wrap: wrap;
   }
 
+.active {
+  background: green;
+  color: white;
+}
 
 @media screen and (max-width: 750px) {
   .contribution-card-container {
