--- a/client/src/Containers/BarGraph/BarGraph.css
+++ b/client/src/Containers/BarGraph/BarGraph.css
@@ -2,3 +2,21 @@
   width: 70%;
   height: 70%;
 }
+
+.all-bar-graphs{
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  align-items: center;
+}
+
+.bar-graph{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5% 0;
+}
+
+.graph-title{
+  font-size: 2em;
+}
